--- a/videokyc-angular/src/app/components/homenavbar/homenavbar.component.html
+++ b/videokyc-angular/src/app/components/homenavbar/homenavbar.component.html
@@ -9,8 +9,8 @@
             <li class="nav-item" routerLink="/solutions">Solutions</li>
         </ul>
         <div class="buttons">
-            <button class= "loginbtn" routerLink="/login">Login</button>
-            <button class="signupbtn" routerLink="/signup">Sign Up</button>
+            <button class= "secondary-btn" routerLink="/login">Login</button>
+            <button class="primary-btn signupbtn" routerLink="/signup">Sign Up</button>
         </div>
         
     </div>
