--- a/videokyc-angular/src/app/components/growbusiness/growbusiness.component.css
+++ b/videokyc-angular/src/app/components/growbusiness/growbusiness.component.css
@@ -5,25 +5,35 @@
 .grow-business-division{
     display: flex;
     margin: 50px;
+    width: 100%;
 }
 
 .grow-business-left{
     width: 30%;
+    margin-right: 15px;
+}
+
+h1.grow-business-title{
+    font-size: 50px;
 }
 
 .grow-business-right{
     width: 70%;
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 }
 
 .grow-business-steps{
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 10px;
 }
 
 .grow-business-step-heading{
     display: flex;
-    gap: 30px;
+    gap: 20px;
     align-items: center;
 }
 
@@ -42,3 +52,25 @@
     font-weight: 400;
     width: 90%;
 }
+/* 
+hr{
+    margin-bottom: 100px;
+} */
+
+/* For title to remain fixed */
+.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 30%;
+    margin: 0px 50px 0px 50px;
+    z-index: 999; /* Ensure it's on top of other content */
+    transition: top 0.5s ease;
+  }
+  
+  .placeholder {
+    display: none; /* Initially hidden */
+    height: 50px; /* Adjust height as needed */
+    /* width: 30%; */
+  }
+   
