--- a/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
+++ b/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
@@ -19,7 +19,7 @@
     font-size: 20px;
     margin-left: 70px;
     cursor: pointer;
-
+    /* font-family: 'Archivo Black',sans serif; */
 }
 
 div.logo a{
@@ -78,13 +78,13 @@ nav{
     margin-right: 70px;
 }
 
-.loginbtn{
+/* .loginbtn{
     color: white;
     background-color: inherit;
     border: 1px solid white;
-    border-radius: 10px;
-    height: 40px;
-    width: 100px;
+    border-radius: 5px;
+    height: 35px;
+    width: 90px;
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
@@ -94,24 +94,19 @@ nav{
     box-shadow: 4px 4px 0 0 white;
     transition: 0.2s ease-in;
     border: none;
-}
+} */
 
 .signupbtn:hover{
     box-shadow: 4px 4px 0 0 #ffffff;
-    transition: 0.05s ease-in;
+    transition: 0.2s ease-in;
     border: none;
 }
 
 .signupbtn{
-    color: #01041D;
-    background-color: #00C2FF;
-    border: 1px solid #01041D;
-    border-radius: 10px;
-    height: 40px;
-    width: 100px;
+    height: 35px;
+    width: 90px;
     font-size: 16px;
-    cursor: pointer;
-    font-weight: 500;
+    margin: 0;
 }
 
 .navdivider{
