--- a/videokyc-angular/src/app/components/learnmore/learnmore.component.html
+++ b/videokyc-angular/src/app/components/learnmore/learnmore.component.html
@@ -2,7 +2,7 @@
     <h4>About VCIP</h4>
     <p class="description">VCIP is an end-to-end encrypted, real-time, video-based customer identification & verification procedure introduced by the RBI. It enables banks & other regulated financial institutions to conduct paperless KYC over a video call with the assistance of a trained official.</p>
 
-    <button id="primary-btn-hover" class="primary-btn">Learn More</button>
+    <button id="primary-btn-hover" class="primary-btn" routerLink="/aboutus">Learn More</button>
 
     <div class="images">
         <img src="https://jep-asset.akamaized.net/cms/assets/jfs/home/about-jio-finance-desk1.webp" alt="stock image 1">
