--- a/videokyc-angular/src/app/page/solutions/solutions.component.css
+++ b/videokyc-angular/src/app/page/solutions/solutions.component.css
@@ -37,7 +37,7 @@ div.solutions-buttons{
     color: black;
     background-color: inherit;
     border: 1px solid black;
-    border-radius: 10px;
+    border-radius: 8px;
     height: 50px;
     width: fit-content;
     font-size: 16px;
@@ -54,10 +54,10 @@ div.solutions-buttons{
 .become-btn{
     height:50px;
     width: fit-content;
-    border-radius: 10px;
     padding: 15px;
 }
 
 .become-btn:hover{
     box-shadow: 4px 4px 0 0 blueviolet;
+    border: none;
 }
