--- a/videokyc-angular/src/styles.css
+++ b/videokyc-angular/src/styles.css
@@ -1,10 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+/* 
+@font-face {
+    font-family: "jiotype-medium";
+    src: url(assets/font/JioType-Medium.ttf) format("truetype");
+  }
+  
+  @font-face {
+    font-family: "jiotype-black";
+    src: url(assets/font/JioType-Black.ttf) format("truetype");
+  }
+  
+  @font-face {
+    font-family: "jiotype-bold";
+    src: url(assets/font/JioType-Bold.ttf) format("truetype");
+  }
+  
+  @font-face {
+    font-family: "jiotype-light";
+    src: url(assets/font/JioType-Light.ttf) format("truetype");
+  }
+  
+  @font-face {
+    font-family: "jiotype-light-italic";
+    src: url(assets/font/JioType-LightItalic.ttf) format("truetype");
+  }
+  
+  @font-face {
+    font-family: "jiotype-medium-italic";
+    src: url(assets/font/JioType-MediumItalic.ttf) format("truetype");
+  }
+  
+  * {
+    font-family: "jiotype-black", sans-serif;
+  } */
+
 
 /* #301b35 */
 body{
-    font-family: Poppins;
+    font-family: Quicksand;
     height: 100%;
     background: linear-gradient(to right, #232649, #340d38);
     background-position: 0% 100%;
@@ -25,14 +61,15 @@ html{
 
 html, body { height: 100%; }
 
+
+/* #00C2FF */
 .primary-btn{
     height: 50px;
     width: 300px;
-    font-weight: 500;
-    color:#3E3B61 ;
-    background-color:#00C2FF ;
-    border-radius: 15px;
-    font-weight: bold;
+    font-weight: 450;
+    color:white ;
+    background-color:#1967D2 ;
+    border-radius: 5px;
     border: none;
     font-size: 18px;
     cursor: pointer;
@@ -46,4 +83,21 @@ html, body { height: 100%; }
     border: 1px solid white;
     box-shadow: 4px 4px 0 0 white;
     transition: 0.3s ease-in;
+}
+
+.secondary-btn{
+    color: white;
+    background-color: inherit;
+    border: 1px solid white;
+    border-radius: 5px;
+    height: 35px;
+    width: 90px;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.secondary-btn:hover{
+    box-shadow: 4px 4px 0 0 white;
+    transition: 0.2s ease-in;
 }
