--- a/videokyc-angular/src/app/page/signup/signup.component.css
+++ b/videokyc-angular/src/app/page/signup/signup.component.css
@@ -12,13 +12,30 @@ html{
     border-radius: 15px;
     background: linear-gradient(to bottom left, #300B38, #232649) ;
     color: white;
-    width: 480px;
-    height: 550px;
-    margin-top: 40px ;
+    width: 70vw;
+    height: 40vh;
+    margin: auto;
+    margin-top: 50px;
+    /* margin-top: 40px ;
     margin-left: 170px;
-    margin-bottom: 50px;
+    margin-bottom: 100px; */
     padding-left: 50px;
+    display: flex;
+    gap: 30px;
 }   
+
+.signupbox-left{
+    width: 50%;
+}
+
+.signupbox-right{
+    width: 50%;
+    border-left: 3px solid white;
+    padding-left: 20px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
 
 .heading{
     display: flex;
@@ -29,7 +46,7 @@ html{
 
 
 .logo{
-    background-color: blue;
+    background:linear-gradient(to right,rgb(96, 96, 255), blue) ;
     border-radius: 50px;
     width: 80px;
     height: 80px;
@@ -53,7 +70,7 @@ html{
 
 h1{
     font-weight: 500;
-    font-size: 35px;
+    font-size: 28px;
     margin-top: 35px;
     margin-bottom: 10px;
 }
@@ -85,9 +102,9 @@ div.names input{
 
 input{
     background-color: #3E3B61;
-    height: 30px;
+    height: 20px;
     border-radius: 15px;
-    width: 430px;
+    width: 300px;
     border: none;
     padding: 11px 0 12px 20px;
     color: white;
@@ -102,8 +119,8 @@ input:hover{
 }
 
 .primary-btn{
-    height: 50px;
-    width: 450px;
+    height: 43px;
+    width: 320px;
     font-weight: 500;
     color:#3E3B61 ;
     background-color:#00C2FF ;
@@ -112,6 +129,7 @@ input:hover{
     border: none;
     font-size: 18px;
     cursor: pointer;
+    margin: 0;
 }
 
 .primary-btn:hover{
