--- a/videokyc-angular/src/app/page/signup/signup.component.html
+++ b/videokyc-angular/src/app/page/signup/signup.component.html
@@ -2,24 +2,26 @@
 
 <!-- Sign up Box -->
 <div class="signupbox">
-    <div class="heading">
-        <div class="logo">Jio</div>
-        <div class="head">Video KYC</div>
-    </div>
-
-    <h1>Create New Account</h1>
-
-    <div class="already">
-        <h4>Already have an account?</h4>
-        <a class="link" routerLink="/login">Login!</a>
+    <div class="signupbox-left">
+        <div class="heading">
+            <div class="logo">Jio</div>
+            <div class="head">Video KYC</div>
+        </div>
+        <h1>Create New Account</h1>
+        <div class="already">
+            <h4>Already have an account?</h4>
+            <a class="link" routerLink="/login">Login!</a>
+        </div>
     </div>
     
-    <div class="form">
+    <div class="signupbox-right">
+        <div class="form">
         
-        <input type="text" placeholder="UserName">
-        <input type="text" placeholder="Email ID">
-        <input type="text" placeholder="Password">
-        <button class="primary-btn" routerLink="/login">Create Account</button>
-
+            <input type="text" placeholder="UserName">
+            <input type="text" placeholder="Email ID">
+            <input type="text" placeholder="Password">
+            <button class="primary-btn" routerLink="/login">Create Account</button>
+        </div>
     </div>
 </div>
+
