--- a/videokyc-angular/src/app/page/signup/signup.component.html
+++ b/videokyc-angular/src/app/page/signup/signup.component.html
@@ -7,9 +7,9 @@
             <div class="logo">Jio</div>
             <div class="head">Video KYC</div>
         </div>
-        <h1>Create New Account</h1>
+        <h1>Become a Partner</h1>
         <div class="already">
-            <h4>Already have an account?</h4>
+            <h4>Already a Partner?</h4>
             <a class="link" routerLink="/login">Login!</a>
         </div>
     </div>
@@ -18,9 +18,9 @@
         <div class="form">
         
             <input type="text" placeholder="UserName">
-            <input type="text" placeholder="Email ID">
+            <input type="text" placeholder="Company Email ID">
             <input type="text" placeholder="Password">
-            <button class="primary-btn" routerLink="/login">Create Account</button>
+            <button class="primary-btn" routerLink="/login">Become a Partner</button>
         </div>
     </div>
 </div>
