--- a/videokyc-angular/src/app/page/solutions/solutions.component.html
+++ b/videokyc-angular/src/app/page/solutions/solutions.component.html
@@ -4,8 +4,8 @@
     <h1 class="solutions-headingtop">Products & Solutions</h1>
     <p class="solutions-heading-description">Leverage Jio VCIP products and solutions to help your customers reduce costs, increase operational agility, and capture new market opportunities.</p>
     <div class="solutions-buttons">
-        <button class="become-btn primary-btn">Become a Partner</button>
-        <button class="login-btn">Login</button>
+        <button class="become-btn primary-btn" routerLink="/signup" >Become a Partner</button>
+        <button class="login-btn" routerLink="/login" >Login</button>
     </div>
 </div>
 
