--- a/videokyc-angular/src/app/page/home/home.component.html
+++ b/videokyc-angular/src/app/page/home/home.component.html
@@ -13,8 +13,8 @@
         <p class="description">VCIP is an end-to-end encrypted, real-time, video-based customer identification & verification procedure introduced by the RBI. It enables banks & other regulated financial institutions to conduct paperless KYC over a video call with the assistance of a trained official.</p>
         <!-- <hr class="genericdivider"> -->
         <div class="herotext-buttons">
-            <button class="become-btn primary-btn">Become a Partner</button>
-            <button class="portal-btn secondary-btn">Go to Portal</button>
+            <button class="become-btn primary-btn" routerLink="/signup" >Become a Partner</button>
+            <button class="portal-btn secondary-btn" routerLink="/login" >Go to Portal</button>
         </div>
     </div>
 
