--- a/videokyc-angular/src/app/page/signup/signup.component.css
+++ b/videokyc-angular/src/app/page/signup/signup.component.css
@@ -7,10 +7,11 @@ html{
     background: linear-gradient(to  top right, #01041D, #8889a1);
 } */
 
+/* #232649 */
 .signupbox{
     padding: 35px;
     border-radius: 15px;
-    background: linear-gradient(to bottom left, #300B38, #232649) ;
+    background: linear-gradient(to bottom left, #232649, #300B38) ;
     color: white;
     width: 70vw;
     height: 40vh;
