--- a/videokyc-angular/src/app/page/signup/signup.component.html
+++ b/videokyc-angular/src/app/page/signup/signup.component.html
@@ -18,8 +18,8 @@
         <div class="form">
         
             <input type="text" placeholder="UserName">
-            <input type="text" placeholder="Company Email ID">
-            <input type="text" placeholder="Password">
+            <input type="email" placeholder="Company Email ID">
+            <input type="password" placeholder="Password">
             <button class="primary-btn" routerLink="/login">Become a Partner</button>
         </div>
     </div>
