--- a/videokyc-angular/src/app/components/footer/footer.component.html
+++ b/videokyc-angular/src/app/components/footer/footer.component.html
@@ -29,7 +29,7 @@
         <div class="footercol">
             <h5 class="footerheading">Our Company</h5>
             <ul>
-                <li>About us</li>
+                <li routerLink="/aboutus" >About us</li>
                 <li>Board Of Directors</li>
                 <li>Board Of Committees</li>
                 <li>Management</li>
