--- a/videokyc-angular/src/app/page/login/login.component.css
+++ b/videokyc-angular/src/app/page/login/login.component.css
@@ -10,7 +10,7 @@ html{
 .signupbox{
     padding: 35px;
     border-radius: 15px;
-    background: linear-gradient(to bottom left, #300B38, #232649) ;
+    background: linear-gradient(to bottom, #300B38, #232649) ;
     color: white;
     width: 70vw;
     height: 40vh;
