--- a/videokyc-angular/src/app/page/signup/signup.component.css
+++ b/videokyc-angular/src/app/page/signup/signup.component.css
@@ -11,7 +11,7 @@ html{
 .signupbox{
     padding: 35px;
     border-radius: 15px;
-    background: linear-gradient(to bottom left, #232649, #300B38) ;
+    background: linear-gradient(to bottom, #232649, #300B38) ;
     color: white;
     width: 70vw;
     height: 40vh;
