contact us page added, flow info page added, flow items hover effect

--- a/videokyc-angular/src/app/components/footer/footer.component.html
+++ b/videokyc-angular/src/app/components/footer/footer.component.html
@@ -53,7 +53,7 @@
         <div class="footercol">
             <h5 class="footerheading">Quick Links</h5>
             <ul>
-                <li>Contact Us</li>
+                <li routerLink="/contactus" >Contact Us</li>
                 <li>Career</li>
                 <li>RBI Guidelines</li>
                 <li>Terms & Conditions</li>
