--- a/videokyc-angular/src/app/components/flowitem/flowitem.component.css
+++ b/videokyc-angular/src/app/components/flowitem/flowitem.component.css
@@ -101,6 +101,11 @@ ol li{
     text-align: center;
 }
 
+.onecard:hover{
+    border: 1px solid rgb(222, 187, 255) ;
+    box-shadow: 0 4px 8px 0 rgba(177, 177, 177, 0.2), 0 6px 20px 0 rgba(177, 177, 177, 0.19);
+}
+
 h3{
     color: white;
     font-size: 20px;
