--- a/videokyc-angular/src/app/components/footer/footer.component.html
+++ b/videokyc-angular/src/app/components/footer/footer.component.html
@@ -3,15 +3,15 @@
         <h2 class="footervkyc">VCIP</h2>
         <p class="infop">VCIP is a secure solution that enables your customers to verify themselves from the comfort of their homes.</p>
         <div class="social-links">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-google"></i>
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook-f"(click)="openWebsite('https://www.facebook.com')"></i>
+            <i class="fab fa-twitter"(click)="openWebsite('https://www.twitter.com')"></i>
+            <i class="fab fa-google"(click)="openWebsite('https://www.google.com')"></i>
+            <i class="fab fa-instagram"(click)="openWebsite('https://www.instagram.com')"></i>
         </div>
         <h5 class="reviewsheading">See Our Glowing Reviews on:</h5>
         <div class="social-links reviews">
-            <i class="fab fa-stack-overflow fa-2x" style="color: #ffac44;"></i><h5 class="reviewheads">Stack Overflow</h5>
-            <i class="fab fa-reddit-alien fa-2x" style="color: #ff4500;"></i><h5 class="reviewheads">Reddit</h5>
+            <i class="fab fa-stack-overflow fa-2x" style="color: #ffac44;"(click)="openWebsite('https://www.stackoverflow.com')"></i><h5 class="reviewheads">Stack Overflow</h5>
+            <i class="fab fa-reddit-alien fa-2x" style="color: #ff4500;"(click)="openWebsite('https://www.reddit.com')"></i><h5 class="reviewheads">Reddit</h5>
         </div>
     </div>
 
