--- a/videokyc-angular/src/app/components/footer/footer.component.html
+++ b/videokyc-angular/src/app/components/footer/footer.component.html
@@ -54,6 +54,7 @@
             <h5 class="footerheading">Quick Links</h5>
             <ul>
                 <li routerLink="/contactus" >Contact Us</li>
+                <li routerLink="/chooseus" >Why Choose Us</li>
                 <li>Career</li>
                 <li>RBI Guidelines</li>
                 <li>Terms & Conditions</li>
