--- a/videokyc-angular/src/app/components/learnmore/learnmore.component.html
+++ b/videokyc-angular/src/app/components/learnmore/learnmore.component.html
@@ -6,10 +6,10 @@
 
     <div class="images">
         <img src="https://jep-asset.akamaized.net/cms/assets/jfs/home/about-jio-finance-desk1.webp" alt="stock image 1">
-        <div class="image-flex">
+        <!-- <div class="image-flex">
             <img src="https://jep-asset.akamaized.net/cms/assets/jfs/home/about-jio-finance-desk2.webp" alt="stock image 2">
             <img src="https://jep-asset.akamaized.net/cms/assets/jfs/home/about-jio-finance-desk3.webp" alt="stock image 3">
-        </div>
+        </div> -->
         <img src="https://jep-asset.akamaized.net/cms/assets/jfs/home/about-jio-finance-desk4.webp" alt="stock image 2">
         <img src="https://jep-asset.akamaized.net/cms/assets/jfs/home/about-jio-finance-desk1.webp" alt="stock image 3">
         <img src="https://jep-asset.akamaized.net/cms/assets/jfs/home/about-jio-finance-desk4.webp" alt="stock image 4">
