--- a/videokyc-angular/src/app/page/home/home.component.css
+++ b/videokyc-angular/src/app/page/home/home.component.css
@@ -11,7 +11,7 @@
     background-color: whitesmoke;
     display: flex;
     justify-content: center;
-    padding: 0 50px 50px 50px ;
+    padding: 50px 50px 50px 50px ;
     gap: 15px;
 }
 
