--- a/videokyc-angular/src/app/page/home/home.component.html
+++ b/videokyc-angular/src/app/page/home/home.component.html
@@ -1,9 +1,9 @@
 <app-homenavbar></app-homenavbar>
 
-<div class="ip">
+<!-- <div class="ip">
     <p class="welcome" *ngIf="latestRecord">Welcome {{latestRecord.username}}</p>
     <p class="welcome">IP Address: {{ip}}</p>
-</div>
+</div> -->
 
 <div class="herotext">
     
