Basic changes, irrelevant

--- a/videokyc-angular/src/app/components/footer/footer.component.html
+++ b/videokyc-angular/src/app/components/footer/footer.component.html
@@ -55,7 +55,7 @@
             <ul>
                 <li routerLink="/contactus" >Contact Us</li>
                 <li routerLink="/chooseus" >Why Choose Us</li>
-                <li>Career</li>
+                <li>Careers</li>
                 <li>RBI Guidelines</li>
                 <li>Terms & Conditions</li>
                 <li>Privacy Policy</li>
