--- a/videokyc-angular/src/app/components/dropdowncard/dropdowncard.component.css
+++ b/videokyc-angular/src/app/components/dropdowncard/dropdowncard.component.css
@@ -1,6 +1,6 @@
 .homeheading{
     color:white;
-    font-size:25px;
+    font-size:55px;
     font-weight:500;
     margin:auto;
     margin: 40px 0 40px 0;
@@ -14,7 +14,7 @@
     padding: 50px;
     display: flex;
     align-items:baseline;
-    justify-content: space-between;
+    justify-content: center;
     gap: 40px;
     margin: auto;
     width: 800px;
@@ -25,7 +25,7 @@
 
 .select{
     color:white;
-    font-size:25px;
+    font-size:20px;
     font-weight:400;
 }
 
